--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write 'components/**/*.tsx' 'app/**/*.tsx' 'app/**/*.tsx'"
   },
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
@@ -20,6 +21,7 @@
     "googleapis": "^129.0.0",
     "lucide-react": "^0.300.0",
     "next": "14.0.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
@@ -32,9 +34,10 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.0.4",
     "postcss": "^8.4.32",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.0",
     "typescript": "^5"
   }
