--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.4.5",
     "faker": "^6.6.6",
     "googleapis": "^129.0.0",
     "lucide-react": "^0.300.0",
